--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,12 @@ android {
         viewBinding true
         dataBinding true
     }
+
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 }
 
 dependencies {
@@ -95,7 +101,7 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
 
     //Paging 3
-    def paging_version = "3.0.0-alpha11"
+    def paging_version = "3.0.0-alpha12"
     implementation "androidx.paging:paging-runtime-ktx:$paging_version"
 
     //MultiDex
@@ -105,11 +111,19 @@ dependencies {
     implementation("com.squareup.okhttp3:logging-interceptor:4.9.0")
 
     //Protobuf Data Store
-    implementation  "androidx.datastore:datastore-core:1.0.0-alpha01"
+    implementation  "androidx.datastore:datastore-core:1.0.0-alpha05"
     implementation  "com.google.protobuf:protobuf-javalite:3.10.0"
+
+    //Mockk
+    testImplementation "io.mockk:mockk:1.10.5"
+
+    //Roboelectric
+    testImplementation 'org.robolectric:robolectric:4.4'
 
     //Test
     testImplementation 'junit:junit:4.13.1'
+    androidTestImplementation 'androidx.test:core:1.3.0'
+    androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
