--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,7 +92,7 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     //Coil
-    implementation("io.coil-kt:coil:1.1.0")
+    implementation("io.coil-kt:coil:1.1.1")
 
     //Room
     def room_version = "2.3.0-alpha04"
@@ -103,6 +103,7 @@ dependencies {
     //Paging 3
     def paging_version = "3.0.0-alpha12"
     implementation "androidx.paging:paging-runtime-ktx:$paging_version"
+    testImplementation "androidx.paging:paging-common-ktx:$paging_version"
 
     //MultiDex
     implementation 'androidx.multidex:multidex:2.0.1'
@@ -111,8 +112,8 @@ dependencies {
     implementation("com.squareup.okhttp3:logging-interceptor:4.9.0")
 
     //Protobuf Data Store
-    implementation  "androidx.datastore:datastore-core:1.0.0-alpha05"
-    implementation  "com.google.protobuf:protobuf-javalite:3.10.0"
+    implementation "androidx.datastore:datastore-core:1.0.0-alpha06"
+    implementation "com.google.protobuf:protobuf-javalite:3.10.0"
 
     //Mockk
     testImplementation "io.mockk:mockk:1.10.5"
@@ -121,7 +122,15 @@ dependencies {
     testImplementation 'org.robolectric:robolectric:4.4'
 
     //Test
+
+    //Unit Test
     testImplementation 'junit:junit:4.13.1'
+    testImplementation 'androidx.test.ext:truth:1.3.0'
+    testImplementation 'androidx.test:core:1.3.0'
+    testImplementation 'androidx.test.ext:junit:1.1.2'
+    testImplementation 'androidx.test:runner:1.3.0'
+
+    //Integration Test
     androidTestImplementation 'androidx.test:core:1.3.0'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
