--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ plugins {
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.example.rickandmortyapp"
@@ -53,10 +53,9 @@ android {
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
@@ -71,7 +70,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
 
     //Lifecycle
-    def lifecycle_version = '2.2.0'
+    def lifecycle_version = '2.3.0'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
@@ -82,12 +81,12 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
     //Dagger Hilt ViewModel
-    def hilt_view_model_version = '1.0.0-alpha02'
+    def hilt_view_model_version = '1.0.0-alpha03'
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_view_model_version"
     kapt "androidx.hilt:hilt-compiler:$hilt_view_model_version"
 
     //Navigation Component
-    def nav_version = "2.3.2"
+    def nav_version = "2.3.3"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
@@ -95,13 +94,13 @@ dependencies {
     implementation("io.coil-kt:coil:1.1.1")
 
     //Room
-    def room_version = "2.3.0-alpha04"
+    def room_version = "2.3.0-beta01"
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
     //Paging 3
-    def paging_version = "3.0.0-alpha12"
+    def paging_version = "3.0.0-beta01"
     implementation "androidx.paging:paging-runtime-ktx:$paging_version"
     testImplementation "androidx.paging:paging-common-ktx:$paging_version"
 
@@ -116,7 +115,8 @@ dependencies {
     implementation "com.google.protobuf:protobuf-javalite:3.10.0"
 
     //Mockk
-    testImplementation "io.mockk:mockk:1.10.5"
+    testImplementation 'org.mockito:mockito-core:2.23.0'
+    testImplementation 'org.mockito:mockito-core:2.23.0'
 
     //Roboelectric
     testImplementation 'org.robolectric:robolectric:4.4'
